#+TITLE: Changelog

* Unreleased

** Added

- =inform7-mode= for editing Inform 7 files

* 0.0.0 - 2020-04-12

** Added

- =CHANGELOG.org=
- =inform7.el=
- =LICENSE= (GPL-3.0)
- =README.org=